tests/ui/attr_bad_align.stderr
error: fixcol-derive error: Expected values for align are "left", "right", or "full".
 --> tests/ui/attr_bad_align.rs:5:32
  |
5 |     #[fixed(width = 5, align = "backwards")]
  |                                ^^^^^^^^^^^
